# libcypher-parser

./: .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac  cypher-lint.1.in  doxygen.cfg  index.html  libcypher-parser.spec  params.json
.cmake/: config.h.in  cypher-parser.h.in
.cmake/Modules/: FindCheck.cmake  FindFmem.cmake  FindLeg.cmake
Windows/: Windows.sln  config.h
Windows/Tests/: Tests.vcxproj  Tests.vcxproj.filters  fmem-winapi-tmpfile.c  fmem.h  test_suite.c
Windows/Win32Static/: Win32Static.vcxproj  Win32Static.vcxproj.filters
build-aux/: build-debian.dockerfile  build.dockerfile  release.sh  valgrind-package.sh
build-aux/m4/: declare_versions.m4  with_libs.m4
build-aux/pycypher/: generate-bindings.py
ci/: install_leg.sh  pycypher_i686.dockerfile  pycypher_linux_build.sh  pycypher_osx_build.sh  pycypher_x86_64.dockerfile
compat/: memstream.c
debian/: changelog  control  copyright  cypher-lint.install  libcypher-parser-doc.doc-base  libcypher-parser-doc.install  libcypher-parser-doc.links  libcypher-parser2-dev.install  libcypher-parser2.install  libcypher-parser2.symbols  libcypher-parser3.symbols  libcypher-parser7.symbols  libcypher-parser8.symbols  rules  watch
debian/patches/: no-libedit.patch  series
debian/upstream/: metadata
doc/: CNAME
doc/0.1/: classes.html  files.html  globals.html  globals_enum.html  globals_func.html  globals_type.html  globals_vars.html  index.html  structcypher__input__position.html
doc/0.2/: classes.html  cypher-parser_8h.html  files.html  globals.html  structcypher__input__position.html  structcypher__input__range.html
doc/0.3/: annotated.html  globals_enum.html  globals_func.html  globals_func_l.html  globals_l.html  globals_type.html  globals_vars.html  index.html
doc/0.4/: annotated.html  classes.html  cypher-parser_8h.html  files.html  globals.html  globals_enum.html  globals_func.html  globals_func_l.html  globals_l.html  globals_type.html  globals_vars.html  index.html  structcypher__input__position.html  structcypher__input__range.html
doc/0.5/: annotated.html  classes.html  cypher-parser_8h.html  files.html  globals.html  globals_enum.html  globals_func.html  globals_func_l.html  globals_l.html  globals_type.html  globals_vars.html  index.html  structcypher__input__position.html  structcypher__input__range.html
doc/0.5.4/: globals_func.html  globals_type.html  globals_vars.html  index.html
doc/0.5.5/: structcypher__input__range.html
doc/0.6/: annotated.html  classes.html  cypher-parser_8h.html  files.html  globals_enum.html  globals_func.html  globals_func_l.html  globals_type.html  globals_vars.html  index.html  structcypher__input__range.html
doc/0.6.0/: globals.html  globals_l.html  structcypher__input__position.html
doc/latest/: annotated.html  classes.html  cypher-parser_8h.html  files.html  globals.html  globals_enum.html  globals_func.html  globals_func_l.html  globals_l.html  globals_type.html  globals_vars.html  index.html  structcypher__input__position.html  structcypher__input__range.html
doc/lib/: Makefile.am
lib/: Makefile.in
lib/doc/: Makefile.in  doxygen.cfg
lib/src/: Makefile.am  Makefile.in  annotation.c  ast.c  ast_all.c  ast_all_nodes_scan.c  ast_all_rels_scan.c  ast_any.c  ast_apply_all_operator.c  ast_apply_operator.c  ast_binary_operator.c  ast_block_comment.c  ast_boolean.c  ast_call.c  ast_call_subquery.c  ast_case.c  ast_collection.c  ast_command.c  ast_comment.c  ast_comparison.c  ast_create.c  ast_create_node_prop_constraint.c  ast_create_node_prop_index.c  ast_create_node_props_index.c  ast_create_pattern_props_index.c  ast_create_rel_prop_constraint.c  ast_create_rel_props_index.c  ast_cypher_option.c  ast_cypher_option_param.c  ast_delete.c  ast_drop_node_prop_constraint.c  ast_drop_node_prop_index.c  ast_drop_node_props_index.c  ast_drop_rel_prop_constraint.c  ast_error.c  ast_explain_option.c  ast_expression.c  ast_extract.c  ast_false.c  ast_filter.c  (+110 more)
lib/test/: Makefile.am  Makefile.in  check_call.c  check_indexes.c  check_libcypher-parser_suite.c  check_pattern.c  check_query.c  check_statement.c  memstream.c  memstream.h
linter/: Makefile.in
m4/: Makefile.in  declare_versions.m4
pycypher/: .gitignore  Makefile.am  README.md  generate.py  linux_build.sh  local_tests.sh  osx_build.sh  run_tests.py  setup.cfg  setup.py
pycypher/src/: Makefile.am  __init__.py  ast.py  bindings.c  extract_props.c  parser.c  setup.py  version.py.in
src/: Makefile.in
src/lib/: Makefile.am  Makefile.in  ast.c  ast.h  ast_all.c  ast_all_nodes_scan.c  ast_all_rels_scan.c  ast_any.c  ast_apply.c  ast_apply_all.c  ast_apply_operator.c  ast_binary_operator.c  ast_block_comment.c  ast_call.c  ast_case.c  ast_collection.c  ast_command.c  ast_comparison.c  ast_create.c  ast_create_index.c  ast_create_node_prop_exists_constraint.c  ast_create_rel_prop_exists_constraint.c  ast_create_unique_constraint.c  ast_cypher_option.c  ast_cypher_option_param.c  ast_delete.c  ast_drop_index.c  ast_drop_node_prop_exists_constraint.c  ast_drop_rel_prop_exists_constraint.c  ast_drop_unique_constraint.c  ast_error.c  ast_explain_option.c  ast_extract.c  ast_false.c  ast_filter.c  ast_float.c  ast_foreach.c  ast_function_name.c  ast_identifier.c  ast_index_name.c  (+78 more)
tests/: Makefile.am  Makefile.in  check_call.c  check_case.c  check_command.c  check_constraints.c  check_create.c  check_delete.c  check_eof.c  check_error_tracking.c  check_errors.c  check_expression.c  check_foreach.c  check_indexes.c  check_libcypher-parser.c  check_libcypher-parser_suite.c  check_list_comprehensions.c  check_load_csv.c  check_map_projection.c  check_match.c  check_merge.c  check_pattern.c  check_pattern_comprehension.c  check_pycypher.sh  check_query.c  check_quick_fparse.c  check_quick_parse.c  check_reduce.c  check_remove.c  check_return.c  check_segments.c  check_set.c  check_start.c  check_statement.c  check_union.c  check_unwind.c  check_util.c  check_with.c
windows/: test_suite.c
(+79 files in other folders)
